--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "news-explorer-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Leishmanitus.github.io/news-explorer-frontend",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -37,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "prettier": "3.5.3"
   },
   "prettier": {
